# nrp-app-copier

./: README.md  README.md.copier  copier.yml  invenio.cfg.copier  nrp  pyproject.toml  variables.copier
docker/: docker-compose.yml.copier
fixtures/: catalogue.yaml  resource-types.yaml
i18n/semantic-ui/translations/messages/: index.js.copier
ui/branding/semantic-ui/less/globals/: site.overrides  site.variables
ui/branding/templates/: header_frontpage.html
ui/branding/templates/base/: css.html  javascript.html
